# ksystemstats_scripts

./: CMakeLists.txt  PKGBUILD  README  README.md  example.py  example.sh  metadata.json  scripts.cpp  scripts.h
examples/home-assistant/: README.md  config.yaml.example  home-assistant.py
examples/homeassistant/: config.yaml  ha.py
